# ohnomore_seq2seq_rs

./: Cargo.toml  NOTE  README.md
ohnomore_seq2seq_rs/: Cargo.toml
ohnomore_seq2seq_rs/python/: config.toml  morph_cnt.sh  train.py
ohnomore_seq2seq_rs/python/ohnomore_seq2seq/: __init__.py
ohnomore_seq2seq_rs/python/ohnomore_seq2seq/data_processing/: __init__.py  batcher.py  reader.py
ohnomore_seq2seq_rs/python/ohnomore_seq2seq/models/: __init__.py  abstract_model.py  basic_model.py
ohnomore_seq2seq_rs/python/ohnomore_seq2seq/util/: __init__.py  attentions.py  config.py  numberer.py
ohnomore_seq2seq_rs/src/: lib.rs
ohnomore_seq2seq_rs/src/lemma/: lemmatizer.rs  mod.rs
ohnomore_seq2seq_rs/src/lemma/tf/: mod.rs  tensorflow_wrapper.rs
ohnomore_seq2seq_rs/src/lemma/tf/tf_config/: allocation_description.rs  attr_value.rs  cluster.rs  config.rs  cost_graph.rs  debug.rs  function.rs  graph.rs  mod.rs  mod.sh  node_def.rs  op_def.rs  resource_handle.rs  rewriter_config.rs  step_stats.rs  tensor.rs  tensor_description.rs  tensor_shape.rs  types.rs  versions.rs
ohnomore_seq2seq_rs/src/util/: config.rs  mod.rs
ohnomore_seq2seq_rs/testdata/: config.toml  inference_config.toml  wiki-sample.conll
ohnomore_seq2seq_rs_utils/: Cargo.toml  README.md
